--- a/README
+++ b/README
@@ -45,3 +45,9 @@ mwrap-0.33.10
     Add support for Matlab R2018a complex interleaved API
     Add support for C99 int32_t, int64_t, uint32_t, uint64_t 
 
+---
+
+mwrap-0.33.11
+
+    Allow single precision Matlab inputs and outputs
+
