--- a/README
+++ b/README
@@ -51,3 +51,10 @@ mwrap-0.33.11
 
     Allow single precision Matlab inputs and outputs
 
+---
+
+mwrap-0.33.12
+
+    Include support for ulong, uint, ushort, uchar only if needed
+    
+
