--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,12 @@
 Recent updates:
 
+Version 1.0 (Aug 4, 2020)
+Added support for 64-bit Matlab and gcc-4.6
+Added support for gcc 7.3+
+Added support for Matlab R2018a complex interleaved API
+Added support for C99 int32_t, int64_t, uint32_t, uint64_t
+Allow single precision Matlab inputs and outputs
+
 Version 0.32 (Nov 5, 2008)
 Added support for new single-class style MATLAB objects; an example
 is in the manual, as well as in examples/eventq.
