Update man file

--- a/doc/mwrap.1
+++ b/doc/mwrap.1
@@ -61,9 +61,10 @@ exceptions.
 .
 .TP
 .B \-i8
-convert int, long, uint, ulong types to int64_t, uint64_t. This provides
-a convenient way to interface with -fdefault-integer-8 and 
--i8 flags used by Fortran compilers.
+convert \fBint\fP, \fBlong\fP, \fBuint\fP, \fBulong\fP types to
+\fBint64_t\fP, \fBuint64_t\fP. This provides
+a convenient way to interface with \fB-fdefault-integer-8\fP and 
+\fB-i8\fP flags used by Fortran compilers.
 .
 .TP
 .B \-c99complex
