--- a/doc/mwrap.tex
+++ b/doc/mwrap.tex
@@ -12,7 +12,7 @@
 \newcommand{\mwrap}{\textsc{MWrap}}
 \newcommand{\gOR}{ $|$ }
 
-\title{\mwrap\ User Guide\\ Version 1.1}
+\title{\mwrap\ User Guide\\ Version 1.2}
 \author{D. Bindel}
 
 \pagestyle{fancy}
@@ -84,7 +84,7 @@ object-oriented facilities will not function with GNU Octave.
 The {\tt mwrap} command line has the following form:
 \begin{verbatim}
   mwrap [-mex outputmex] [-m output.m] [-c outputmex.c] [-mb] 
-        [-list] [-catch] [-i8] [-c99complex] [-cppcomplex] 
+        [-list] [-catch] [-i8] [-c99complex] [-cppcomplex] [-gpu]
         infile1 infile2 ...
 \end{verbatim}
 where
@@ -128,6 +128,8 @@ where
 
 \item {\tt -cppcomplex} tells \mwrap\ to use the C++ complex floating
   point types as the default {\tt dcomplex} and {\tt fcomplex} types.
+
+\item {\tt -gpu} tells \mwrap\ to add support code for MATLAB gpuArray.
 
 \end{itemize}
 
